--- a/index.html
+++ b/index.html
@@ -57,20 +57,25 @@
 
 		<div class="content">
 
-			<h1 class="text-intro opacity-0">Hey Guys!<br>
-				We're Coming Soon...</h1>
+			<h1 class="text-intro opacity-0">Blockchain And<br>
+				Cryptoeconomics</h1>
 
-			<h2 class="text-intro opacity-0">Perfect and awesome template to present your future product or service.<br>
-				Hooking audience attention is all in the opener.</h2>
+			<h2 class="text-intro opacity-0">Creating an asset management system that is open to the world.</h2>
 
 			<nav>
 				<ul>
-					<li>
+					<!-- <li>
 						<a href="#" id="open-more-info" data-target="right-side"
-							class="light-btn text-intro opacity-0">More Informations</a>
-					</li>
-					<li>
+							class="light-btn text-intro opacity-0">Explore Blockchain</a>
+					</li> -->
+					<!-- <li>
 						<a data-dialog="somedialog" class="action-btn trigger text-intro opacity-0">Notify Me!</a>
+					</li> -->
+					<li>
+						<a href="#" id="open-more-info" data-target="right-side" class="btn btn-primario animado"
+							data-aos="fade-down" data-aos-once="true">Explore Blockchain
+							<span class="expansor"></span>
+						</a>
 					</li>
 				</ul>
 			</nav>
@@ -78,7 +83,7 @@
 		</div>
 
 		<!-- Social icons -->
-		<div class="social-icons">
+		<div class="social-icons text-center">
 
 			<a href="#"><i class="fab fa-facebook-f"></i></a>
 			<a href="#"><i class="fab fa-twitter"></i></a>
@@ -90,8 +95,31 @@
 	</section>
 	<!-- END - Home/Left Part -->
 	<!-- START - More Informations/Right Part -->
-	<section id="right-side" class="hide-right">
+	<section id="right-side" class="hide-right py-5" style="background: rgba(0, 4, 18, 0.8);">
 
+		<div class="container">
+			<div class="row px-4 px-lg-5 align-items-center">
+				<div class="col-lg-5 contenido-block">
+					<div class="position-relative">
+						<div class="content-box p-4">
+							<img src="img/blockchain/logo.svg" class="img-fluid" alt="">
+						</div>
+						<div class="sombra"></div>
+					</div>
+				</div>
+				<div class="col-lg-7">
+					<div class="section-title">
+						<h2 class="pt-3 pt-lg-3">About</h2>
+						<p class="justificado">Blockchain Ekosystem is a cryptocurrencies investment agreement
+							management company that
+							offers customers the best montly results with the investment of theirdigital currencies,
+							such as: Bitcoin, BitcoinCash, Ethereum, Litecoin, and Theter. <br><br>
+							Present in 3 countries, Blockchain Ekosystem has services with the best security and the
+							bestresults for you to reach your goals.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="content">
 
 			<h3>Light, Versatile & Surprising</h3>
